--- a/web-app/templates/master.html
+++ b/web-app/templates/master.html
@@ -1,14 +1,19 @@
 {% extends 'admin/base.html' %}
 
 {% block access_control %}
+
 {% if current_user.is_authenticated %}
-<div class="btn-group pull-right">
-    <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-        <i class="icon-user"></i> {{ current_user.login }} <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-        <li><a href="{{ url_for('admin.logout_view') }}">Log out</a></li>
-    </ul>
-</div>
+	<div class="btn-group pull-right">
+
+		<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+			<i class="icon-user"></i> {{ current_user.login }} <span class="caret"></span>
+		</a>
+
+		<ul class="dropdown-menu">
+			<li><a href="{{ url_for('admin.logout_view') }}">log out</a></li>
+		</ul>
+
+	</div>
 {% endif %}
+
 {% endblock %}
