fixed password fields autocompleting

--- a/web-app/templates/admin/new_setting.html
+++ b/web-app/templates/admin/new_setting.html
@@ -29,7 +29,7 @@
             {% endfor %}
 
             <button class="btn" type="submit">submit</button>
-			<button class="btn" onclick="window.location.href = '../'">back</button>
+			<button class="btn btn-danger" onclick="window.location.href = '../'">back</button>
 
         </form>
 
