--- a/web-app/templates/master.html
+++ b/web-app/templates/master.html
@@ -1,5 +1,11 @@
 {% extends 'admin/base.html' %}
 
+<head>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			crossorigin="anonymous"></script>
+</head>
+
 {% block access_control %}
 
 {% if current_user.is_authenticated %}
