added separate position size settings

--- a/web-app/templates/admin/settings.html
+++ b/web-app/templates/admin/settings.html
@@ -26,7 +26,8 @@
 					<th>api key</th>
 					<th>api secret</th>
 					<th>symbol</th>
-					<th>position size</th>
+					<th>position size (buy)</th>
+					<th>position size (sell)</th>
 					<th>hedge</th>
 					<th>hedge side</th>
 					<th>hedge multiplier</th>
@@ -40,7 +41,8 @@
 						<td>{{ setting.api_key }}</td>
 						<td>{{ setting.api_secret }}</td>
 						<td>{{ setting.symbol }}</td>
-						<td>{{ setting.position_size }}</td>
+						<td>{{ setting.position_size_buy }}</td>
+						<td>{{ setting.position_size_sell }}</td>
 						<td>{{ setting.hedge }}</td>
 						<td>{{ setting.hedge_side }}</td>
 						<td>{{ setting.hedge_multiplier }}</td>
