better admin page index

--- a/web-app/templates/admin/index.html
+++ b/web-app/templates/admin/index.html
@@ -11,13 +11,13 @@
 
 			<br>
 
-			<button class="btn" onclick="window.location.href = '/admin/settings/'">
+			<button class="btn btn-success" onclick="window.location.href = '/admin/settings/'">
 				change bot settings
 			</button>
 
 			<br><br>
 
-			<button class="btn" onclick="window.location.href = '/admin/user/'">
+			<button class="btn btn-info" onclick="window.location.href = '/admin/user/'">
 				manage users
 			</button>
         {% else %}
